# netvox

./: .eslintrc.cjs  README.md  Taskfile.yml  orval.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
server/: deno.jsonc  prepare.ts
server/netvox_core/: Cargo.toml  LICENSE  about.toml  bindings.json
server/netvox_core/src/: lib.rs
server/src/: main.ts  server.ts  worker.ts
src/: App.tsx  main.css  main.tsx  store.ts
src/api/voicevox/: api.ts  query.ts
src/components/: Character.tsx
src/hooks/: useVAD.tsx
src/utils/: generateVoice.ts  playBlob.ts
